# Data2SQL

./: Cargo.toml  README.md  structure  telemetry.jsonl
src/: app.rs  main.rs
src/core/: mod.rs  task.rs  telemetry.rs
src/core/extract/: csv.rs  factory.rs  json.rs  mod.rs  xml.rs
src/core/load/: mod.rs  sqlite.rs
src/core/transform/: mapper.rs  mod.rs
src/ui/: messages.rs  mod.rs  state.rs  theme.rs
src/ui/view/: export_zone.rs  import_zone.rs  mod.rs  modals.rs
